--- a/rank.html
+++ b/rank.html
@@ -16,14 +16,14 @@
 </head>
 <body>
  
-<div class="container">
+<div class="container-fluid">
 
     <div class="card img-fluid">
-            <img class="card-img-top img-responsive center-cropped" src="rank.png" alt="Certificate"  class="mx-auto d-block" style="width:62%; display: block; margin-left: auto; margin-right: auto;">
+            <img class="card-img-top img-responsive" src="rank.png" alt="Certificate"  class="mx-auto d-block" style="width:62%; display: block; margin-left: auto; margin-right: auto;">
       <div class="card-img-overlay" style="text-align:center;">
 
             <h5 class="card-text" style="padding:16%">
-                    <div class="align-self-center">This is to certify that<br>
+                    <div class="align-self-center"style="font-size:1.5vw;">This is to certify that<br>
                         <br><br>
                         <span id="name">name</span> of <span id="school">school</span><br><br><br>
                         has achieved <span id="rank">rank</rank><br>
