--- a/part.html
+++ b/part.html
@@ -18,7 +18,7 @@
       <div class="card-img-overlay" style="text-align:center;">
 
             <h5 class="card-text" style="padding:15%">
-                <div class="align-self-center">This is to certify that<br>
+                <div class="align-self-center" style="font-size:1.5vw;">This is to certify that<br>
                     <br>
                     <span id="name">name</span> of <span id="school">school</span><br><br><br>
                     is hereby recognized for his/her participation in<br>
