--- a/rank.html
+++ b/rank.html
@@ -15,27 +15,17 @@
         </script>
 </head>
 <body>
- 
-<div class="container-fluid">
-
-    <div class="card img-fluid">
-            <img class="card-img-top img-responsive" src="rank.png" alt="Certificate"  class="mx-auto d-block" style="width:62%; display: block; margin-left: auto; margin-right: auto;">
-      <div class="card-img-overlay" style="text-align:center;">
-
-            <h5 class="card-text" style="padding:16%">
-                    <div class="align-self-center"style="font-size:1.5vw;">This is to certify that<br>
-                        <br><br>
-                        <span id="name">name</span> of <span id="school">school</span><br><br><br>
-                        has achieved <span id="rank">rank</rank><br>
-                        in Phase 1 of <b>T</b>echkriti <b>O</b>pen <b>S</b>chool <b>C</b>hampionship<br>
-                        2018 conducted by Techkriti, IIT Kanpur.</div>
-                    
-      </h5>
-        <p class="card-text"></div>
-      </div>
-    </div>
-    <button onclick="myFunction()">Print this page</button>
+        <img src="rankup.png" alt="Rankupper"  class="mx-auto d-block" style="width:100%; display: block; margin-left: auto; margin-right: auto;">
+        <div style="text-align:center;">
+                <h5 class="card-text" style="padding:2%">
+                        <div class="align-self-center" style="font-size:1.7vw;">This is to certify that<br>
+                            <br><br>
+                            <span id="name">name</span> of <span id="school">school</span><br><br><br>
+                            has achieved <span id="rank">rank</rank><br>
+                            in Phase 1 of <b>T</b>echkriti <b>O</b>pen <b>S</b>chool <b>C</b>hampionship<br>
+                            2018 conducted by Techkriti, IIT Kanpur.</div>
+</h5>
 </div>
-
-</body>
-</html>
+<img src="rankdown.png" alt="Rankdown"  class="mx-auto d-block" style="width:100%; display: block; margin-left: auto; margin-right: auto;">
+<button onclick="myFunction()">Print this page</button>
+</div>
