--- a/part.html
+++ b/part.html
@@ -6,31 +6,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script ></script>
+  <script>
+        function myFunction() {
+          window.print();
+        }
+  </script>
 </head>
 <body>
  
-<div class="container">
+<div class="container" style="text-align:center;  font-family: 'Open Sans', sans-serif;">
 
     <div class="card img-fluid">
             <img class="card-img-top" src="participation.png" alt="Certificate"  class="mx-auto d-block" style="width:100%; display: block; margin-left: auto; margin-right: auto;">
       <div class="card-img-overlay" style="text-align:center;">
 
             <h5 class="card-text" style="padding-bottom:0%; margin-top:25%; margin-bottom:25%">
-                <div class="align-self-center" style="font-size:1.8vw;">This is to certify that<br>
-                    <br>
-                    <span id="name">name</span> of <span id="school">school</span><br><br><br>
+                <div class="align-self-center" style="font-size:1.4vw;">This is to certify that
+                  <br>
+                  Tanmay Yadav
+                  <br>
+                    <span id="name"></span> of <br>
+                    <span id="school">
+                    St. Peter's College Agra
+                    </span>
+                    <br><br>
                     is hereby recognized for his/her participation in<br>
-                    Phase 1 of <b>T</b>echkriti <b>O</b>pen <b>S</b>chool <b>C</b>hampionship<br>
-                    2018 conducted by Techkriti, IIT Kanpur.</div>
+                    Phase I of <b>T</b>echkriti <b>O</b>pen <b>S</b>chool <b>C</b>hampionship<br>
+                    2018 conducted by Techkriti, IIT Kanpur.
+                  </div>
                     
-      </h5>
-        <p class="card-text"></div>
+            </h5>
+        <p class="card-text"></p>
+        </div>
       </div>
-    </div>
-
+      <button class="btn btn-success" onclick="myFunction()">Print this page</button>
 </div>
+
+
 
 </body>
 </html>
