--- a/rank.html
+++ b/rank.html
@@ -7,25 +7,40 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Charm" rel="stylesheet">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
   <script>
         function myFunction() {
           window.print();
         }
-        </script>
+  </script>
 </head>
 <body>
+	<div class="container" style="text-align:center; font-family: 'Charm', cursive;">
         <img src="rankup.png" alt="Rankupper"  class="mx-auto d-block" style="width:100%; display: block; margin-left: auto; margin-right: auto;">
-        <div style="text-align:center;">
-                <h5 class="card-text" style="padding:2%">
-                        <div class="align-self-center" style="font-size:1.7vw;">This is to certify that<br>
+        <div >
+                <h5 class="card-text" style="padding:2%; background-color:#fcfaff; ">
+                        <div class="align-self-center" style="font-size:1.7vw;">
+                        	This is to certify that
+                        	<br><br>
+                        	<span style="padding-top: 5px;">Tanmay Yadav</span>
+                            <br>
+                            <span id="name"></span> of <br>
+                            <span id="school">St Peter's College, Agra</span>
                             <br><br>
-                            <span id="name">name</span> of <span id="school">school</span><br><br><br>
-                            has achieved <span id="rank">rank</rank><br>
-                            in Phase 1 of <b>T</b>echkriti <b>O</b>pen <b>S</b>chool <b>C</b>hampionship<br>
-                            2018 conducted by Techkriti, IIT Kanpur.</div>
-</h5>
-</div>
-<img src="rankdown.png" alt="Rankdown"  class="mx-auto d-block" style="width:100%; display: block; margin-left: auto; margin-right: auto;">
-<button onclick="myFunction()">Print this page</button>
-</div>
+                            has achieved 
+                            <span id="rank" style="margin-bottom: 20px;"><strong> <u>&nbsp;1042 </u></strong></span>&nbsp;rank
+                            <br>
+                            in Phase I of <b>T</b>echkriti <b>O</b>pen <b>S</b>chool <b>C</b>hampionship
+                            2018 <br> conducted by <br> Techkriti, IIT Kanpur.
+                        </div>
+                        </span>
+				</h5>
+		</div>
+
+	
+		<img src="rankdown.png" alt="Rankdown"  class="mx-auto d-block" style="width:100%; display: block; margin-left: auto; margin-right: auto;">
+		<button class="btn btn-success" onclick="myFunction()">Print this page</button>
+	</div>
+</body>
+</html>
