--- a/part.html
+++ b/part.html
@@ -14,13 +14,13 @@
 <div class="container">
 
     <div class="card img-fluid">
-            <img class="card-img-top" src="participation.png" alt="Certificate"  class="mx-auto d-block" style="width:100%; display: block; margin-left: auto; margin-right: auto;">
+            <img class="card-img-top" src="participation.jpg" alt="Certificate"  class="mx-auto d-block" style="width:100%; display: block; margin-left: auto; margin-right: auto;">
       <div class="card-img-overlay" style="text-align:center;">
 
             <h5 class="card-text" style="padding-bottom:0%; margin-top:25%; margin-bottom:25%">
-                <div class="align-self-center" style="font-size:1.8vw;">This is to certify that<br>
+                <div class="align-self-center" style="font-size:1.8vw;color: #1576E0;font-family:lato">This is to certify that<br>
                     <br>
-                    <span id="name">name</span> of <span id="school">school</span><br><br><br>
+                    <span id="name">name</span> of <span id="school">school</span><br><br>
                     is hereby recognized for his/her participation in<br>
                     Phase 1 of <b>T</b>echkriti <b>O</b>pen <b>S</b>chool <b>C</b>hampionship<br>
                     2018 conducted by Techkriti, IIT Kanpur.</div>
